@@ -1,6 +1,10 @@
+2017-10-06  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/assertions.R (assertDate, assertTime): First drafts
+
 2017-06-24  Dirk Eddelbuettel  <edd@debian.org>
 
-	* src/anytime.cpp (anytime_cpp): Clone numeric inputs to preserver
+	* src/anytime.cpp (anytime_cpp): Clone numeric inputs to preserve
 
 2017-06-05  Dirk Eddelbuettel  <edd@debian.org>
 
